force-app/main/default/objects/MakeAPaymentConfig__mdt/MakeAPaymentConfig__mdt.object-meta.xml
<CustomObject>
    <description>Configuring information to be displayed when the &apos;Make a Payment&apos; button is pressed on the Opportunity, ensuring that relevant payment details are shown on the screen.</description>
    <label>Make a Payment Config</label>
    <pluralLabel>Make a Payment Configs</pluralLabel>
</CustomObject>