force-app/main/default/objects/MakeAPaymentConfig__mdt/fields/DecimalStep__c.field-meta.xml
<CustomField>
    <fullName>DecimalStep__c</fullName>
    <label>Decimal Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>