force-app/main/default/objects/MakeAPaymentConfig__mdt/fields/FieldAPI__c.field-meta.xml
<CustomField>
    <fullName>FieldAPI__c</fullName>
    <label>Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>