force-app/main/default/objects/MakeAPaymentConfig__mdt/fields/IsCustomPicklist__c.field-meta.xml
<CustomField>
    <fullName>IsCustomPicklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCustomPicklist</label>
    <type>Checkbox</type>
</CustomField>