force-app/main/default/objects/MakeAPaymentConfig__mdt/fields/IsRequired__c.field-meta.xml
<CustomField>
    <fullName>IsRequired__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>