force-app/main/default/objects/MakeAPaymentConfig__mdt/fields/MaxTextLength__c.field-meta.xml
<CustomField>
    <fullName>MaxTextLength__c</fullName>
    <label>Max Text Length</label>
    <length>255</length>
    <type>Text</type>
</CustomField>