force-app/main/default/objects/MakeAPaymentConfig__mdt/fields/PicklistValues__c.field-meta.xml
<CustomField>
    <fullName>PicklistValues__c</fullName>
    <label>Picklist Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>