force-app/main/default/objects/MakeAPaymentConfig__mdt/fields/SourceFieldAPI__c.field-meta.xml
<CustomField>
    <fullName>SourceFieldAPI__c</fullName>
    <label>Source Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>