force-app/main/default/objects/MakeAPaymentConfig__mdt/fields/SourceObjectAPI__c.field-meta.xml
<CustomField>
    <fullName>SourceObjectAPI__c</fullName>
    <label>Source Object API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>