force-app/main/default/objects/MakeAPaymentConfig__mdt/listViews/MakeAPayment.listView-meta.xml
<ListView>
    <fullName>MakeAPayment</fullName>
    <columns>Order__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>DataType__c</columns>
    <columns>DecimalStep__c</columns>
    <columns>FieldAPI__c</columns>
    <columns>FieldLabel__c</columns>
    <columns>IsActive__c</columns>
    <columns>IsCustomPicklist__c</columns>
    <columns>IsRequired__c</columns>
    <columns>MaxTextLength__c</columns>
    <columns>PaymentType__c</columns>
    <columns>PicklistValues__c</columns>
    <columns>SourceFieldAPI__c</columns>
    <columns>SourceObjectAPI__c</columns>
    <filterScope>Everything</filterScope>
    <label>Make a Payment</label>
</ListView>